feat: Update OpenAPI specifications and improve response handling
- Added `first` and `last` boolean properties to pagination schemas in `pos-location` and `pos-order` OpenAPI files.
- Reintroduced `404` response for not found scenarios in `pos-order` and `pos-people` OpenAPI files.
- Enhanced `pos-people` OpenAPI to include `200` response for existing links.
- Introduced new audit endpoints in `pos-shop-manager` OpenAPI with corresponding request and response schemas.
- Updated `pos-tax` OpenAPI to correct the order of properties in the address schema.
- Fixed response codes in `pos-vehicle-inventory` OpenAPI for search queries.
- Adjusted response handling in `pos-workorder` OpenAPI to ensure proper error responses.
- Refactored tests in `pos-security-service` and `pos-shop-manager` to improve clarity and maintainability.